# fastapi-uv-docker-boilerplate

./: .env.example  .gitignore  README.md  cmd.core.sh  cmd.logs.sh  cmd.run.sh  cmd.setup.sh  cmd.stop.sh  compose-tools.yaml  compose.yaml
app/: .dockerignore  Dockerfile  pyproject.toml
app/src/: config.py  database.py  main.py  models.py  redis_client.py  schemas.py
app/tests/: test_main.py
