[project]
name = "fastapi-uv-docker-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "../README.md"
requires-python = "==3.12.11"
dependencies = [
    "fastapi==0.128.0",
    "psycopg[binary]==3.3.2",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "redis==7.1.0",
    "sqlalchemy==2.0.45",
    "uvicorn[standard]==0.40.0",
]
